# rjira

./: .gitignore  Cargo.toml  LICENSE  README.md
adaptors/: Cargo.toml
adaptors/cli/: Cargo.toml
adaptors/cli/src/: add_item.rs  assign_item.rs  backlog.rs  error_handler.rs  estimate_item.rs  lib.rs
adaptors/fs/: Cargo.toml
adaptors/fs/src/: fs_backlog_repository.rs  lib.rs
adaptors/rest/: Cargo.toml
adaptors/rest/src/: add_item.rs  backlog.rs  error_handler.rs  lib.rs  update_item.rs
adaptors/src/: fs_backlog_repository.rs
applications/rest-server/: Cargo.toml
applications/rest-server/src/: main.rs
applications/rjira/: Cargo.toml
applications/rjira/src/: main.rs
cores/backlog/: Cargo.toml
cores/backlog/src/: error.rs  lib.rs  models.rs  types.rs
cores/backlog/src/models/: assignable.rs  backlog.rs  estimatable.rs  find_from_collection.rs  task.rs
domains/backlog/: Cargo.toml
domains/backlog/src/: types.rs
domains/backlog/src/models/: add_item.rs  assignable.rs  backlog.rs  backlog_item.rs  entity.rs  estimatable.rs  find_from_collection.rs  story.rs  task.rs
ports/: Cargo.toml
ports/driven/backlog-repo/: Cargo.toml
ports/driven/backlog-repo/src/: backlog_repository.rs  error.rs  lib.rs
ports/driver/backlog-service/: Cargo.toml
ports/driver/backlog-service/src/: backlog_uc.rs  error.rs  lib.rs
ports/src/: error.rs  lib.rs
usecases/uc-backlog/: Cargo.toml
usecases/uc-backlog/src/: backlog_uc.rs  error.rs  lib.rs
utils/eyre-ext/: Cargo.toml
utils/eyre-ext/src/: lib.rs
