[package]
name = "fs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.52"
backlog = { path = "../../cores/backlog" }
backlog-repo = { path = "../../ports/driven/backlog-repo" }
serde_yaml = "0.8.23"
