[package]
name = "rest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4.3"
serde = { version = "1.0.133", features = ["derive"] }
tokio = "1.15.0"
backlog = { path = "../../cores/backlog" }
backlog-service = { path = "../../ports/driver/backlog-service" } 
backlog-repo = { path = "../../ports/driven/backlog-repo" } 
fs = { path = "../fs" } 
serde_json = "1.0.74"
anyhow = "1.0.52"
