[package]
name = "backlog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dyn-clone = "1.0.4"
erased-serde = "0.3.17"
indexmap = { version = "1.7.0", features = ["serde"] }
mockall = "0.11.0"
serde = { version = "1.0.132", features = ["derive"] }
thiserror = "1.0.30"
typetag = "0.1.8"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
serde_json = "1.0.73"
anyhow = "1.0.52"

[dev-dependencies]
getset = "0.1.2"
rstest = "0.12.0"
