[package]
name = "backlog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dyn-clone = "1.0.4"
indexmap = "1.7.0"
mockall = "0.11.0"
thiserror = "1.0.30"
uuid = { version = "0.8.2", features = ["serde", "v4"] }

[dev-dependencies]
getset = "0.1.2"
rstest = "0.12.0"
