[package]
name = "uc-backlog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.30"
ports = { path = "../../ports" }
backlog = { path = "../../domains/backlog" }
async-trait = "0.1.52"
